--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -125,8 +125,8 @@ jobs:
       run: |
         echo "📁 Creating test directories..."
         mkdir -p tests/data
-        chmod 550 tests/data
-        chown root:10001 tests/data
+        sudo chmod 550 tests/data
+        sudo chown root:10001 tests/data
         echo "✅ Test directories created with correct permissions"
 
         echo "🧪 Running tests with coverage..."
@@ -140,8 +140,8 @@ jobs:
       run: |
         echo "📁 Creating data directory..."
         mkdir -p data
-        chmod 550 data
-        chown root:10001 data
+        sudo chmod 550 data
+        sudo chown root:10001 data
         echo "✅ Data directory created with correct permissions"
 
         echo "📝 Creating test environment file..."
