--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -131,12 +131,17 @@ jobs:
         mkdir -p tests/coverage
         sudo chown 10001:10001 tests/coverage
         sudo chmod 700 tests/coverage
+        # Create pytest cache directory
+        mkdir -p tests/pytest_cache
+        sudo chown 10001:10001 tests/pytest_cache
+        sudo chmod 700 tests/pytest_cache
         echo "✅ Test directories created with correct permissions"
 
         echo "🧪 Running tests with coverage..."
         docker run --rm \
           -v ${{ github.workspace }}/tests:/app/tests:ro \
           -v ${{ github.workspace }}/tests/coverage:/coverage:rw \
+          -v ${{ github.workspace }}/tests/pytest_cache:/app/.pytest_cache:rw \
           -e COVERAGE_FILE=/coverage/.coverage \
           --user crsbot \
           crs-bot:test \
