--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -136,11 +136,10 @@ jobs:
         sudo chown 10001:10001 tests/pytest_cache
         sudo chmod 700 tests/pytest_cache
         # Create data directory and log file for tests
-        mkdir -p data
+        sudo mkdir -p data
         sudo chown 10001:10001 data
         sudo chmod 700 data
-        touch data/github_release_bot.log
-        sudo chown 10001:10001 data/github_release_bot.log
+        sudo -u "#10001" touch data/github_release_bot.log
         sudo chmod 600 data/github_release_bot.log
         echo "✅ Test directories and log file created with correct permissions"
 
