--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -139,7 +139,8 @@ jobs:
         sudo mkdir -p data
         sudo chown 10001:10001 data
         sudo chmod 700 data
-        sudo -u "#10001" touch data/github_release_bot.log
+        sudo touch data/github_release_bot.log
+        sudo chown 10001:10001 data/github_release_bot.log
         sudo chmod 600 data/github_release_bot.log
         echo "✅ Test directories and log file created with correct permissions"
 
