--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -135,14 +135,19 @@ jobs:
         mkdir -p tests/pytest_cache
         sudo chown 10001:10001 tests/pytest_cache
         sudo chmod 700 tests/pytest_cache
-        # Create data directory and log file for tests
+        # Create data directory and files for tests
         sudo mkdir -p data
         sudo chown 10001:10001 data
         sudo chmod 700 data
+        # Create and set up log file
         sudo touch data/github_release_bot.log
         sudo chown 10001:10001 data/github_release_bot.log
         sudo chmod 600 data/github_release_bot.log
-        echo "✅ Test directories and log file created with correct permissions"
+        # Create and set up version file
+        echo '{}' | sudo tee data/last_version.json > /dev/null
+        sudo chown 10001:10001 data/last_version.json
+        sudo chmod 600 data/last_version.json
+        echo "✅ Test directories and files created with correct permissions"
 
         # Set permissions for source files
         sudo chown root:10001 github_release.py setup.py config.yaml
