--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -197,9 +197,10 @@ jobs:
         echo "🚀 Starting container..."
         # Initialize the named volume with our temporary directory
         docker run --rm \
-          -v $(pwd)/temp_data:/data \
-          -v data:/data_init \
-          busybox cp -a /data/. /data_init/
+          -v $(pwd)/temp_data:/source \
+          -v data:/target \
+          --user root \
+          alpine sh -c 'cp -a /source/. /target/ && chown -R root:10001 /target && chmod 550 /target && chown 10001:10001 /target/*.{log,json} && chmod 600 /target/*.{log,json}'
 
         # Start the container
         docker compose up -d
