--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -10,6 +10,7 @@ on:
     - 'requirements.txt'
     - 'setup.py'
     - '**.py'
+    - '.github/workflows/docker-test.yml'
   pull_request:
     branches: [ main ]
     paths:
@@ -19,6 +20,7 @@ on:
     - 'requirements.txt'
     - 'setup.py'
     - '**.py'
+    - '.github/workflows/docker-test.yml'
   workflow_dispatch:
 
 
