--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -203,20 +203,31 @@ jobs:
           -v data:/target \
           --user root \
           alpine sh -c 'set -x && \
+          rm -rf /target/* && \
           cp -a /source/. /target/ && \
           chown -R root:10001 /target && \
           chmod 550 /target && \
+          touch /target/github_release_bot.log && \
+          touch /target/last_version.json && \
+          echo "{}" > /target/last_version.json && \
           chown 10001:10001 /target/github_release_bot.log && \
           chown 10001:10001 /target/last_version.json && \
           chmod 600 /target/github_release_bot.log && \
           chmod 600 /target/last_version.json && \
+          echo "Volume contents and permissions:" && \
           ls -la /target && \
+          echo "Log file details:" && \
           stat /target/github_release_bot.log && \
+          echo "Version file details:" && \
           stat /target/last_version.json'
 
         # Start the container with explicit volume mount
         docker compose down -v
         docker compose up -d
+
+        # Verify permissions after container start
+        echo "🔍 Verifying container permissions..."
+        docker compose exec -T crs-bot sh -c 'ls -la /app/data && echo "Log file details:" && stat /app/data/github_release_bot.log && echo "Version file details:" && stat /app/data/last_version.json'
 
         # Clean up temporary directory
         sudo rm -rf temp_data
