fix: explicitly copy individual files to volume

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -199,20 +199,18 @@ jobs:
         echo "🚀 Starting container..."
         # Initialize the named volume with our temporary directory
         docker run --rm \
-          -v $(pwd)/temp_data:/source \
+          -v $(pwd)/temp_data:/source:ro \
           -v data:/target \
           --user root \
           alpine sh -c 'set -x && \
           rm -rf /target/* && \
           mkdir -p /target && \
-          cp -av /source/* /target/ && \
           ls -la /source && \
+          cp -av /source/github_release_bot.log /target/ && \
+          cp -av /source/last_version.json /target/ && \
           ls -la /target && \
           chown -R root:10001 /target && \
           chmod 550 /target && \
-          touch /target/github_release_bot.log && \
-          echo "{}" > /target/last_version.json && \
-          ls -la /target && \
           chown 10001:10001 /target/github_release_bot.log && \
           chown 10001:10001 /target/last_version.json && \
           chmod 600 /target/github_release_bot.log && \
