--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -238,6 +238,10 @@ jobs:
           chown 10001:10001 /target/last_version.json && \
           chmod 600 /target/github_release_bot.log && \
           chmod 600 /target/last_version.json && \
+          # Ensure log file exists and is writable
+          touch /target/github_release_bot.log && \
+          chown 10001:10001 /target/github_release_bot.log && \
+          chmod 600 /target/github_release_bot.log && \
           echo "Final volume contents and permissions:" && \
           ls -la /target && \
           echo "Log file details:" && \
@@ -247,7 +251,15 @@ jobs:
 
         # Verify volume contents and permissions after initialization
         echo "Verifying volume contents and permissions after initialization..."
-        docker run --rm -v data:/verify --user root alpine sh -c 'ls -lan /verify && stat /verify/github_release_bot.log && stat /verify/last_version.json'
+        docker run --rm -v data:/verify --user 10001 alpine sh -c 'set -x && \
+          echo "Testing file access..." && \
+          touch /verify/github_release_bot.log && \
+          echo "test" > /verify/github_release_bot.log && \
+          cat /verify/github_release_bot.log && \
+          echo "File permissions:" && \
+          ls -lan /verify && \
+          stat /verify/github_release_bot.log && \
+          stat /verify/last_version.json'
 
         # Start the container with explicit volume mount
         echo "Stopping any existing containers..."
