--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -233,15 +233,13 @@ jobs:
           echo "Setting ownership and permissions..." && \
           # Use numeric IDs to ensure consistency
           chown -R 0:10001 /target && \
-          chmod 550 /target && \
+          chmod 770 /target &&  # First set more permissive to allow operations
           chown 10001:10001 /target/github_release_bot.log && \
           chown 10001:10001 /target/last_version.json && \
           chmod 600 /target/github_release_bot.log && \
           chmod 600 /target/last_version.json && \
-          # Ensure log file exists and is writable
-          touch /target/github_release_bot.log && \
-          chown 10001:10001 /target/github_release_bot.log && \
-          chmod 600 /target/github_release_bot.log && \
+          # Now restrict directory permissions
+          chmod 550 /target && \
           echo "Final volume contents and permissions:" && \
           ls -la /target && \
           echo "Log file details:" && \
