--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -238,8 +238,8 @@ jobs:
           chown 10001:10001 /target/last_version.json && \
           chmod 600 /target/github_release_bot.log && \
           chmod 600 /target/last_version.json && \
-          # Now restrict directory permissions
-          chmod 550 /target && \
+          # Now set final directory permissions - allow group write
+          chmod 570 /target && \
           echo "Final volume contents and permissions:" && \
           ls -la /target && \
           echo "Log file details:" && \
