--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -233,13 +233,19 @@ jobs:
           echo "Setting ownership and permissions..." && \
           # Use numeric IDs to ensure consistency
           chown -R 0:10001 /target && \
-          chmod 770 /target &&  # First set more permissive to allow operations
+          echo "Initial directory permissions:" && \
+          ls -la /target && \
+          chmod 0770 /target &&  # Use full octal mode
+          echo "After chmod 0770:" && \
+          ls -la /target && \
           chown 10001:10001 /target/github_release_bot.log && \
           chown 10001:10001 /target/last_version.json && \
-          chmod 600 /target/github_release_bot.log && \
-          chmod 600 /target/last_version.json && \
+          chmod 0600 /target/github_release_bot.log && \
+          chmod 0600 /target/last_version.json && \
           # Now set final directory permissions - allow group write
-          chmod 570 /target && \
+          chmod 0570 /target && \
+          echo "After chmod 0570:" && \
+          ls -la /target && \
           echo "Final volume contents and permissions:" && \
           ls -la /target && \
           echo "Log file details:" && \
@@ -250,7 +256,14 @@ jobs:
         # Verify volume contents and permissions after initialization
         echo "Verifying volume contents and permissions after initialization..."
         docker run --rm -v data:/target --user 10001 alpine sh -c 'set -x && \
+          echo "Directory permissions:" && \
+          ls -ld /target && \
+          echo "Directory contents:" && \
+          ls -la /target && \
           echo "Testing file access..." && \
+          echo "Current user:" && \
+          id && \
+          echo "Attempting write..." && \
           touch /target/github_release_bot.log && \
           echo "test" > /target/github_release_bot.log && \
           cat /target/github_release_bot.log && \
