--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -255,12 +255,19 @@ jobs:
 
         # Verify volume contents and permissions after initialization
         echo "Verifying volume contents and permissions after initialization..."
-        docker run --rm -v data:/target --user 10001 alpine sh -c 'set -x && \
-          echo "Directory permissions:" && \
+        # First verify as root to ensure everything is set up correctly
+        docker run --rm -v data:/target --user root alpine sh -c 'set -x && \
+          echo "Directory permissions (as root):" && \
           ls -ld /target && \
-          echo "Directory contents:" && \
+          echo "Directory contents (as root):" && \
           ls -la /target && \
-          echo "Testing file access..." && \
+          echo "File details (as root):" && \
+          stat /target/github_release_bot.log && \
+          stat /target/last_version.json'
+
+        # Then verify as crsbot user to ensure they can access what they need
+        docker run --rm -v data:/target --user 10001 alpine sh -c 'set -x && \
+          echo "Testing file access as crsbot..." && \
           echo "Current user:" && \
           id && \
           echo "Attempting write..." && \
@@ -269,9 +276,8 @@ jobs:
           echo "test" > /target/github_release_bot.log && \
           cat /target/github_release_bot.log && \
           echo "File permissions:" && \
-          ls -lan /target && \
-          stat /target/github_release_bot.log && \
-          stat /target/last_version.json'
+          ls -l /target/github_release_bot.log && \
+          ls -l /target/last_version.json'
 
         # Start the container with explicit volume mount
         echo "Stopping any existing containers..."
