--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -235,13 +235,15 @@ jobs:
           chown -R 0:10001 /target && \
           echo "Initial directory permissions:" && \
           ls -la /target && \
-          chmod 0750 /target &&  # Set directly to 750 instead of going through 770
-          echo "After chmod 0750:" && \
+          chmod 0550 /target && \
+          echo "After chmod 0550:" && \
           ls -la /target && \
           chown 10001:10001 /target/github_release_bot.log && \
           chown 10001:10001 /target/last_version.json && \
           chmod 0600 /target/github_release_bot.log && \
           chmod 0600 /target/last_version.json && \
+          # Now set final directory permissions
+          chmod 0750 /target && \
           echo "Final volume contents and permissions:" && \
           ls -la /target && \
           echo "Log file details:" && \
@@ -293,7 +295,10 @@ jobs:
           chown 10001:10001 /target/github_release_bot.log && \
           chown 10001:10001 /target/last_version.json && \
           chmod 0600 /target/github_release_bot.log && \
-          chmod 0600 /target/last_version.json'
+          chmod 0600 /target/last_version.json && \
+          # Verify final permissions
+          echo "Final permissions:" && \
+          ls -la /target'
 
         # Wait a moment for the container to mount volumes and check initial logs
         echo "Waiting for container to start and checking logs..."
